// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Snapshots All 1`] = `
<ol
  className="sc-gsTCUz cWkiwX className"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ol>
`;

exports[`List Snapshots No props 1`] = `
<ul
  className="sc-bdfBwQ hVnxAP"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ul>
`;

exports[`List Snapshots className 1`] = `
<ul
  className="sc-bdfBwQ hVnxAP className"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ul>
`;

exports[`List Snapshots ordered 1`] = `
<ol
  className="sc-gsTCUz cWkiwX"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ol>
`;
